Updated text and translation to only use NxtCity

--- a/landing/templates/landing.html
+++ b/landing/templates/landing.html
@@ -43,7 +43,7 @@
                     <i class="fa fa-bars"></i>
                 </button>
                 <a class="navbar-brand page-scroll" href="#page-top">
-                    <i class="fa fa-play-circle"></i>  <span class="light">NXT</span>AMS<span class="light">15</span>
+                    <i class="fa fa-play-circle"></i>  <span class="light">NXT</span>CITY
                 </a>
             </div>
 
@@ -91,9 +91,9 @@
     <section id="about" class="container content-section text-center">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
-				<h2>{% trans "About NxtAms15" context "header" %}</h2>
+				<h2>{% trans "About NxtCity" context "header" %}</h2>
 				<p>
-				{% blocktrans trimmed %}NxtAms15 is the first edition of NxtCity (pronounced <i>next city</i>), held in Amsterdam at the end of August. During this event, high school students take on the challenge of tackling future problems of their city.{% endblocktrans %}
+				{% blocktrans trimmed %}The first edition of NxtCity (pronounced <i>next city</i>) will be held in Amsterdam at the end of August. During this event, high school students take on the challenge of tackling future problems of their city.{% endblocktrans %}
 				</p>
 				<p>
 				{% trans "More information is coming soon." %}
@@ -106,7 +106,7 @@
     <section id="contact" class="container content-section text-center">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
-				<h2>{% trans "Contact NxtAms15" context "header" %}</h2>
+				<h2>{% trans "Contact NxtCity" context "header" %}</h2>
 				<p>{% trans "Feel free to email us for more information!" %}</p>
                 <p><a href="mailto:info@codecult.nl">info@codecult.nl</a>
                 </p>
@@ -130,7 +130,7 @@
     <!-- Footer -->
     <footer>
         <div class="container text-center">
-			<p>{% trans "NxtAms15 is made possible by <a href='http://codecult.nl'>CodeCult</a>." %}</p>
+			<p>{% trans "NxtCity is made possible by <a href='http://codecult.nl'>CodeCult</a>." %}</p>
         </div>
     </footer>
 
