--- a/landing/templates/landing.html
+++ b/landing/templates/landing.html
@@ -75,7 +75,7 @@
                     <div class="col-md-8 col-md-offset-2">
                         <h1 class="brand-heading">NXTCITY 2015 AMSTERDAM</h1>
                         <p class="intro-text">
-							<strong>{% trans "Real problems. Real solutions. Real learning." %}</strong>
+							<strong>{% trans "Real&nbsp;problems. Real&nbsp;solutions. Real&nbsp;learning." %}</strong>
 							<br />{% trans "Registration opens 30 March 2015" %}
 						</p>
                         <a href="#about" class="btn btn-circle page-scroll">
