--- a/landing/templates/landing.html
+++ b/landing/templates/landing.html
@@ -55,7 +55,7 @@
                         <a href="#page-top"></a>
                     </li>
                     <li>
-						<a class="page-scroll" href="#about">{% trans "About" context "header" %}</a>
+						<a class="page-scroll" href="#about">{% trans "Uitleg" context "header" %}</a>
                     </li>
                     <li>
 						<a class="page-scroll" href="#contact">{% trans "Contact" context "header" %}</a>
@@ -75,8 +75,8 @@
                     <div class="col-md-8 col-md-offset-2">
                         <h1 class="brand-heading">NXTCITY 2015 AMSTERDAM</h1>
                         <p class="intro-text">
-							<strong>{% trans "Real&nbsp;problems. Real&nbsp;solutions. Real&nbsp;learning." %}</strong>
-							<br />{% trans "Registration opens 30 March 2015" %}
+							<strong>{% trans "Echte&nbsp;problemen. Echte&nbsp;oplossingen. Echt&nbsp;leerzaam." %}</strong>
+							<br />{% trans "Inschrijvingen starten op 1 maart 2015" %}
 						</p>
                         <a href="#about" class="btn btn-circle page-scroll">
                             <i class="fa fa-angle-double-down animated"></i>
@@ -91,12 +91,12 @@
     <section id="about" class="container content-section text-center">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
-				<h2>{% trans "About NxtCity" context "header" %}</h2>
+				<h2>{% trans "Over NxtCity" context "header" %}</h2>
 				<p>
-				{% blocktrans trimmed %}The first edition of NxtCity (pronounced <i>next city</i>) will be held in Amsterdam at the end of August. During this event, high school students take on the challenge of tackling future problems of their city.{% endblocktrans %}
+				{% blocktrans trimmed %}De eerste editie van NxtCity (Engelse uitspraak: <i>next city</i>), wordt eind augustus gehouden in Amsterdam. Tijdens dit evenement zullen middelbare scholieren de uitdaging aangaan om de toekomstige problemen van hun stad aan te pakken.{% endblocktrans %}
 				</p>
 				<p>
-				{% trans "More information is coming soon." %}
+				{% trans "Meer informatie komt binnenkort beschikbaar." %}
 				</p>
             </div>
         </div>
@@ -106,10 +106,9 @@
     <section id="contact" class="container content-section text-center">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
-				<h2>{% trans "Contact NxtCity" context "header" %}</h2>
-				<p>{% trans "Feel free to email us for more information!" %}</p>
+				<h2>{% trans "Neem contact op met NxtCity" context "header" %}</h2>
+				<p>{% trans "Voor meer informatie kunt u ons een email sturen." %}</p>
                 <p><a href="mailto:info@codecult.nl">info@codecult.nl</a>
-                </p>
 				<!--
                 <ul class="list-inline banner-social-buttons">
                     <li>
@@ -130,7 +129,7 @@
     <!-- Footer -->
     <footer>
         <div class="container text-center">
-			<p>{% trans "NxtCity is made possible by <a href='http://codecult.nl'>CodeCult</a>." %}</p>
+			<p>{% trans "NxtCity is mogelijk gemaakt door <a href='http://codecult.nl'>CodeCult</a>." %}</p>
         </div>
     </footer>
 
