--- a/landing/templates/landing.html
+++ b/landing/templates/landing.html
@@ -93,6 +93,9 @@
             <div class="col-lg-8 col-lg-offset-2">
 				<h2>{% trans "Over NxtCity" context "header" %}</h2>
 				<p>
+				{% blocktrans trimmed %}Een stad is een geweldig complexe omgeving met een diversiteit aan uitdagingen. Met onderwerpen	vari&#xEB;rend van transport tot energie en van onderwijs tot het milieu, is er een behoefte aan een generatie van creatieve puzzelaars. Door jonge stadsgenoten er vroeg bij te betrekken kunnen we profiteren van hun frisse blik. Daarnaast hebben we een kans op hun langdurige betrokkenheid, samenwerkend aan de stad van morgen.{% endblocktrans %}
+				</p>
+				<p>
 				{% blocktrans trimmed %}De eerste editie van NxtCity (Engelse uitspraak: <i>next city</i>), wordt eind augustus gehouden in Amsterdam. Tijdens dit evenement zullen middelbare scholieren de uitdaging aangaan om de toekomstige problemen van hun stad aan te pakken.{% endblocktrans %}
 				</p>
 				<p>
