--- a/landing/templates/landing.html
+++ b/landing/templates/landing.html
@@ -139,6 +139,18 @@
         </div>
     </section>
 
+	<!-- Partners Section -->
+    <section id="partners" class="container content-section text-center">
+		<div class="row">
+			<h2>{% trans "Partners" context "header" %}</h2>
+			<div class="well">
+				<img src="http://rcjurriaans.github.io/CodeCult/img/icons/logo_alt.png" />
+				<img src="http://www.amsterdam.nl/publish/pages/633808/gasd_sponsorlogo_cmyk.jpg" />
+			</div>
+		</div>
+    </section>
+
+
     <!-- Footer -->
     <footer>
         <div class="container text-center">
