--- a/landing/templates/landing/landing_page.html
+++ b/landing/templates/landing/landing_page.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% load static core_tags i18n %}
+{% load static core_tags i18n partner_tags %}
 {% get_current_language as LANGUAGE_CODE %}
 
 {% block body_params %}id="page-top" data-spy="scroll" data-target=".navbar-fixed-top"{% endblock %}
@@ -76,13 +76,7 @@
 
 	<!-- Partners Section -->
     <section id="partners" class="container content-section text-center">
-		<div class="row">
-			<h2>Partners</h2>
-			<div class="well">
-				<img src="http://rcjurriaans.github.io/CodeCult/img/icons/logo_alt.png" />
-				<img src="http://www.amsterdam.nl/publish/pages/633808/gasd_sponsorlogo_cmyk.jpg" />
-			</div>
-		</div>
+		{% partners %}
     </section>
 
 
