--- a/landing/templates/landing/tags/partners.html
+++ b/landing/templates/landing/tags/partners.html
@@ -3,7 +3,15 @@
 	<h2>Partners</h2>
 	<div class="well">
 	{% for partner in partners %}
-		{% image partner.logo max-300x300 %}
+		{% if partner.logo %}
+			{% if partner.url %}
+			<a href="{{ partner.url }}">
+			{% endif %}
+			{% image partner.logo max-300x300 %}
+			{% if partner.url %}
+			</a>
+			{% endif %}
+		{% endif %}
 	{% endfor %}
 	</div>
 </div>
