--- a/landing/static/css/grayscale.css
+++ b/landing/static/css/grayscale.css
@@ -166,9 +166,7 @@ a:focus {
 }
 
 #partners img {
-	max-width: 300px;
-	max-height: 200px;
-	padding-left: 30px;
+	margin-left: 30px;
 }
 
 @media(min-width:767px) {
