--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -35,6 +35,7 @@
     <body class="{% block body_class %}{% endblock %}" {% block body_params %}{% endblock %}>
         {% wagtailuserbar %}
 
+        {% include "navbar.html" %}
         {% block content %}{% endblock %}
 
         <!-- jQuery -->
