--- a/landing/templates/landing/form_page_landing.html
+++ b/landing/templates/landing/form_page_landing.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% load wagtailcore_tags %}
 
 {% block content %}
     <header class="intro">
@@ -8,7 +9,7 @@
                     <div class="col-md-12">
                         <div class="well form-container">
 							<h2>{{ self.title }}</h2>
-                            {{ self.thank_you_text }}
+                            {{ self.thank_you_text|richtext }}
 						</div>
                     </div>
                 </div>
