Added a blank page; generalized background colors
Test Plan: Run

Reviewers: eszter

Differential Revision: http://review.prcptm.nl/D4

--- a/landing/templates/landing/form_page.html
+++ b/landing/templates/landing/form_page.html
@@ -7,7 +7,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-12">
-                        <div class="well form-container">
+                        <div class="well top-space bg-light">
 							<h2>{{ self.title }}</h2>
 							{{ self.intro|richtext }}
 							<form class="form-horizontal" role="form" action="." method="post">
