--- a/landing/static/css/grayscale.css
+++ b/landing/static/css/grayscale.css
@@ -8,8 +8,21 @@ body {
     width: 100%;
     height: 100%;
     font-family: Lora,"Helvetica Neue",Helvetica,Arial,sans-serif;
+}
+
+.bg-dark {
+	background-color: #000;
     color: #fff;
-    background-color: #000;
+}
+
+.bg-primary {
+	background-color: #00bcd4;
+    color: #000;
+}
+
+.bg-light {
+	background-color: #fff;
+    color: #000;
 }
 
 html {
@@ -162,11 +175,6 @@ a:focus {
 	padding: 10px;
 }
 
-.form-container {
-	background-color: #fff;
-	color: #000;
-}
-
 #partners .well {
 	background: #fff;
 }
@@ -190,7 +198,7 @@ a:focus {
         font-size: 25px;
     }
 
-    .form-container {
+    .top-space {
         margin-top: 70px;
     }
 }
