--- a/landing/templates/landing/form_page_landing.html
+++ b/landing/templates/landing/form_page_landing.html
@@ -7,7 +7,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-12">
-                        <div class="well form-container">
+                        <div class="well top-space bg-light">
 							<h2>{{ self.title }}</h2>
                             {{ self.thank_you_text|richtext }}
 						</div>
