First attempt at auto navigation, not functioning properly yet.
Summary: Created functional state, showing menu items under (language)root.

Test Plan:
* Use case 1
  1. Create one or more child pages under the root page
  2. Set the setting "Show in menus" under the Promote tab
  3. Check if the child pages are listed in the navbar
* User case 2
  1. Create a LanguageRedirectPage
  2. Create one or more LandingPage children under that page
  3. Create one or more child pages under the landingpage
  4. Check if the right child pages (ie. right language) are shown
     in the menu and that the language toggle is correct

Reviewers: eszter

Differential Revision: http://review.prcptm.nl/D5

--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -1,4 +1,5 @@
 {% load compress static wagtailuserbar %}
+{% load core_tags %}
 
 <!DOCTYPE html>
 <!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
@@ -35,7 +36,10 @@
     <body class="{% block body_class %}{% endblock %}" {% block body_params %}{% endblock %}>
         {% wagtailuserbar %}
 
-        {% include "navbar.html" %}
+		{% block menu %}
+			{% get_site_root self as site_root %}
+			{% navbar parent=site_root calling_page=self %}
+		{% endblock %}
         {% block content %}{% endblock %}
 
         <!-- jQuery -->
