--- a/landing/templates/landing/landing_page.html
+++ b/landing/templates/landing/landing_page.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% load static core_tags i18n partner_tags %}
+{% load static core_tags i18n partner_tags wagtailcore_tags %}
 {% get_current_language as LANGUAGE_CODE %}
 
 {% block body_class %}bg-dark{% endblock %}
@@ -32,7 +32,7 @@
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
                 <h2>{{ section.title }}</h2>
-                {{ section.body|safe }}
+                {{ section.body|richtext }}
             </div>
         </div>
     </section>
