--- a/landing/templates/landing/landing_page.html
+++ b/landing/templates/landing/landing_page.html
@@ -10,7 +10,7 @@
 {% block content %}
     <header class="intro">
         <div class="intro-body">
-            <div class="container">
+            <div class="container top-space">
                 <div class="row">
                     <div class="col-md-8 col-md-offset-2">
                         <h1 class="brand-heading">{{ self.display_title }}</h1>
