Cleared logo for additional space on smaller screens

--- a/core/templates/core/tags/navbar.html
+++ b/core/templates/core/tags/navbar.html
@@ -7,7 +7,7 @@
 				<i class="fa fa-bars"></i>
 			</button>
 			{% get_current_language as LANGUAGE_CODE %}
-			<a class="navbar-brand page-scroll" href="/{{LANGUAGE_CODE}}/#page-top">
+			<a class="navbar-brand page-scroll hidden-sm" href="/{{LANGUAGE_CODE}}/#page-top">
 				<i class="fa fa-play-circle"></i>  <span class="light">NXT</span>CITY
 			</a>
 		</div>
