--- a/core/templates/core/tags/navbar.html
+++ b/core/templates/core/tags/navbar.html
@@ -1,4 +1,4 @@
-{% load wagtailcore_tags core_tags i18n %}
+{% load wagtailcore_tags core_tags i18n staticfiles %}
 
 <nav class="navbar navbar-custom navbar-fixed-top" role="navigation">
 	<div class="container">
@@ -8,7 +8,7 @@
 			</button>
 			{% get_current_language as LANGUAGE_CODE %}
 			<a class="navbar-brand page-scroll hidden-sm" href="/{{LANGUAGE_CODE}}/#page-top">
-				<i class="fa fa-play-circle"></i>  <span class="light">NXT</span>CITY
+				<img src='{% static "img/logo.png" %}' />
 			</a>
 		</div>
 
