--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -1,5 +1,4 @@
-{% load compress static wagtailuserbar %}
-{% load core_tags %}
+{% load compress static wagtailuserbar core_tags ganalytics %}
 
 <!DOCTYPE html>
 <!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
@@ -12,6 +11,8 @@
         <title>{% block title %}{% if self.seo_title %}{{ self.seo_title }}{% else %}{{ self.title }}{% endif %}{% endblock %}{% block title_suffix %}{% endblock %}</title>
         <meta name="description" content="" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
+
+		{% ganalytics %}
 
 		<!-- Bootstrap Core CSS -->
         <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
