Added twitter card meta information to base template

--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -32,6 +32,15 @@
 
         {% block extra_css %}
         {% endblock %}
+        
+        <!-- Twitter Card Meta Data -->
+        <meta name="twitter:card" content="summary" />
+        <meta name="twitter:site" content="@nxtcityorg" />
+        <meta name="twitter:title" content="NxtCity" />
+        <meta name="twitter:description" content="Meer info op http://www.nxtcity.org" />
+        <meta name="twitter:image" content="http://www.nxtcity.org/static/img/logo_square.png" />
+        <meta name="twitter:url" content="http://www.nxtcity.org" />
+        
     </head>
 
     <body class="{% block body_class %}{% endblock %}" {% block body_params %}{% endblock %}>
