--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -36,9 +36,14 @@
         <!-- Twitter Card Meta Data -->
         <meta name="twitter:card" content="summary" />
         <meta name="twitter:site" content="@nxtcityorg" />
-        <meta name="twitter:title" content="NxtCity" />
-        <meta name="twitter:description" content="Meer info op http://www.nxtcity.org" />
-        <meta name="twitter:image" content="http://www.nxtcity.org/static/img/logo_square.png" />
+        <!-- The title will be truncated at 70 characters-->
+        <meta name="twitter:title" content="NxtCity 2015" />
+        <!-- Description will be clickable link to provided url. Can be no longer than 200 characters -->
+        <meta name="twitter:description" content="Teams van middelbare scholieren richten zich twee dagen op één van de vraagstukken uit hun stad. Echte oplossingen verzinnen voor echte problemen. Echt leerzaam." />
+        
+        <!-- Image needs to be atleast 120px by 120px and at most 1MB -->
+        <!-- Sidenote: no clue if static file serving is going to work with this -->
+        <meta name="twitter:image" content="{% static 'img/logo_square.png' %}" />
         <meta name="twitter:url" content="http://www.nxtcity.org" />
         
     </head>
