Blog layout is fixed and favicon added to page
Test Plan:
1. Create blog index page
2. Write some blogs
3. Check if everything works/looks ok

Reviewers: sander

Reviewed By: sander

Differential Revision: http://review.prcptm.nl/D10

--- a/core/templates/core/blog_page.html
+++ b/core/templates/core/blog_page.html
@@ -14,11 +14,10 @@
                           <div class="blog-title">
                               {{ self.title|richtext }}
                           </div>
-                          <p>
-                             {{ self.date|date}}
-                          </p>
-                          <div class="well top-space bg-light">
-                            <div align="left">{{ self.body|richtext }}</div>
+                          <div class="well top-blog-space bg-light">
+							<div align="left">{{ self.body|richtext }}</div>
+							<div align="right" style="color: #606060"><i>{{ self.author|richtext}}
+							{{ self.date|date }}</i></div>
                           </div>
                         </div>
                     </div>
