--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -22,6 +22,8 @@
         <link href="http://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
 
         <link href="{% static 'css/grayscale.css' %}" rel="stylesheet">
+        
+        <link rel="shortcut icon" type="image/png" href="{% static 'img/favlogo_white.ico' %}"/>
 
         <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
         <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
