--- a/core/templates/core/partner_page.html
+++ b/core/templates/core/partner_page.html
@@ -19,7 +19,7 @@
 						 </div>
 						 {% for partner in self.partners.all %}
 							<div class = "partner-name">
-								<div style = "clear:both">{{ partner.title }}</div>
+								<h2>{{ partner.title }}</h2>
 							</div>
 							<div class = "well well-sm clearfix bg-light">
 								{% if forloop.counter|divisibleby:2 %}
