Tweaking challenge layout

--- a/core/templates/core/challenge_page.html
+++ b/core/templates/core/challenge_page.html
@@ -14,9 +14,9 @@
                         <div class = "challenge-title">
                             {{ self.title|richtext }}
                         </div>
-                        <div class = "well top-blog-space bg-light">
+                        <div class = "well well-lg clearfix bg-light">
                             <div class = "challenge-picture">
-                                {% image self.picture fill-200x200 %}
+                                {% image self.picture fill-150x150 %}
                             </div>
                             <div align = "left">
                                 {{ self.body|richtext }}
