--- a/core/templates/core/challenge_index_page.html
+++ b/core/templates/core/challenge_index_page.html
@@ -20,15 +20,17 @@
                                 {% endif %}
                                         <div class = "col-md-4">
 											<a href = "{{ challenge.url}}">
-                                            <div class = "well well-sm challenge-topic-title">
-                                                {{ challenge.title|richtext }}
-                                            </div>
-                                            <div class = "challenge-topic-image">	
-                                                {% image challenge.picture fill-120x120 %} 
-                                            </div>
-                                            <div class = "well challenge-topic-short bg-light">
-                                                {{ challenge.short_description }}
-                                            </div>
+												<div class = "well clearfix bg-light">
+													<div class = "challenge-topic-title">
+														{{ challenge.title|richtext }}
+													</div>
+													<div class = "challenge-topic-image">	
+														{% image challenge.picture fill-120x120 %} 
+													</div>
+													<div class = "challenge-topic-short bg-light">
+														{{ challenge.short_description }}
+													</div>
+												</div>
                                             </a>
                                         </div>
                                 {% if forloop.counter0|divisibleby:2 and forloop.counter0 > 0 %}
